[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["sebas zapata <s.zapata05@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.8.0"
black = "^24.8.0"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
